# insurance_faq_bot

./: .gitignore  README.md  config.yml  docker-compose.ce.yml  domain.yml  endpoints.yml  pyproject.toml
actions/: actions.py  config.py  retrieval_pipeline.py
actions/data/: FAQ_maif.csv  selection.yaml
config/rasa/: global.yml
data/: nlu.yml  rules.yml
experiments_notebooks/: 1. Data exploration.ipynb  2. Intent Classification Modelling.ipynb
terms/: agree.txt
